--- a/package.json
+++ b/package.json
@@ -7,15 +7,15 @@
   },
   "main": "test.js",
   "devDependencies": {
-    "tape": "~2.4.0",
-    "gulp": "~3.5.2",
-    "gulp-uglify": "~0.2.1",
-    "gulp-browserify": "~0.4.6",
-    "gulp-watch": "~0.5.0",
-    "gulp-notify": "~1.2.1",
-    "utf8": "~2.0.0",
     "base64-js": "0.0.6",
-    "gulp-size": "~0.1.3"
+    "browserify": "^8.0.1",
+    "gulp": "~3.5.2",
+    "gulp-size": "~0.1.3",
+    "gulp-uglify": "~0.2.1",
+    "gulp-watch": "~0.5.0",
+    "tape": "~2.4.0",
+    "utf8": "~2.0.0",
+    "vinyl-transform": "^1.0.0"
   },
   "testling": {
     "files": "test.js",
